src/objects/gfsurveys__Job__c.object
<CustomObject>
    <fields>
        <fullName>Temp_Task_Count__c</fullName>
        <label>Temp Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Task_Ids_Filled__c</fullName>
        <label>Temp Task Ids Filled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gfsurveys__Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field Officer that completed the job activity.</description>
        <label>Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Activities</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gfsurveys__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact for whom the job activity was completed (would be Interviewee for a survey).</description>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs of Client</relationshipLabel>
        <relationshipName>JobAsInterviewee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gfsurveys__CreationDate__c</fullName>
        <description>Date and time when the Job activity was created.</description>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gfsurveys__CreationNotes__c</fullName>
        <description>Workflows, scheduled job activities or creator user might want to add some notes here.</description>
        <label>Creation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gfsurveys__CreationSource__c</fullName>
        <description>The way the job activity was created.</description>
        <label>Creation Source</label>
        <picklist>
            <picklistValues>
                <fullName>Ad-hoc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gfsurveys__EndDate__c</fullName>
        <description>Date and time when the job activity was completed.</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gfsurveys__EndLocation__c</fullName>
        <label>End Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>gfsurveys__JobTemplate__c</fullName>
        <description>Job for this Job Activity</description>
        <label>Job</label>
        <referenceTo>gfsurveys__JobTemplate__c</referenceTo>
        <relationshipLabel>Job Activities</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gfsurveys__StartDate__c</fullName>
        <description>Date and time when the job activity was started.</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gfsurveys__StartLocation__c</fullName>
        <label>Start Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>id1__c</fullName>
        <label>id1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id2__c</fullName>
        <label>id2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id3__c</fullName>
        <label>id3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>temp processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Activity</label>
    <listViews>
        <fullName>gfsurveys__All</fullName>
        <columns>NAME</columns>
        <columns>gfsurveys__Contact__c</columns>
        <columns>gfsurveys__EndDate__c</columns>
        <columns>gfsurveys__StartDate__c</columns>
        <columns>gfsurveys__JobTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>gfsurveys__Completed</fullName>
        <columns>NAME</columns>
        <columns>gfsurveys__Contact__c</columns>
        <columns>gfsurveys__EndDate__c</columns>
        <columns>gfsurveys__StartDate__c</columns>
        <columns>gfsurveys__JobTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gfsurveys__EndDate__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Completed</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>